--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fof-iG-I1R">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -7,22 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="139" y="130"/>
-        </scene>
-        <!--Home View Controller-->
+        <!--ホーム-->
         <scene sceneID="5ek-Jq-7ua">
             <objects>
                 <viewController storyboardIdentifier="Home" id="BeV-mN-obh" customClass="HomeViewController" sceneMemberID="viewController">
@@ -32,12 +17,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="uzX-hL-e0R"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="ホーム" image="home" id="D4V-0W-aSr"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Igb-W8-hKk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-790" y="874"/>
         </scene>
-        <!--Image Select View Controller-->
+        <!--投稿-->
         <scene sceneID="7Cr-x4-zSq">
             <objects>
                 <viewController storyboardIdentifier="ImageSelect" id="bS9-Uj-qOj" customClass="ImageSelectViewController" sceneMemberID="viewController">
@@ -47,6 +33,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="oQe-Jg-uNY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="投稿" image="camera" id="NGO-Tn-eur"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Epo-oI-VS0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -67,7 +54,7 @@
             </objects>
             <point key="canvasLocation" x="138" y="1641"/>
         </scene>
-        <!--Setting View Controller-->
+        <!--設定-->
         <scene sceneID="Ei0-aP-W3X">
             <objects>
                 <viewController storyboardIdentifier="Setting" id="iti-c7-2t0" customClass="SettingViewController" sceneMemberID="viewController">
@@ -77,6 +64,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="HID-Y7-5Ih"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="設定" image="setting" id="dBW-Jj-tnl"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v5C-uF-wON" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -95,7 +83,31 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pyd-AR-Up3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1055" y="130"/>
+            <point key="canvasLocation" x="1963.7681159420292" y="129.91071428571428"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fgT-G9-Tbd">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fof-iG-I1R" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bVA-Bo-mUI">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BeV-mN-obh" kind="relationship" relationship="viewControllers" id="85d-lP-Y1X"/>
+                        <segue destination="bS9-Uj-qOj" kind="relationship" relationship="viewControllers" id="mb7-Hh-nrq"/>
+                        <segue destination="iti-c7-2t0" kind="relationship" relationship="viewControllers" id="lmK-Df-YCw"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ra-U0-HTl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="25" height="25"/>
+        <image name="home" width="25" height="25"/>
+        <image name="setting" width="25" height="25"/>
+    </resources>
 </document>
