[add] アカウント作成機能

--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -73,13 +73,76 @@
         <!--Login View Controller-->
         <scene sceneID="htw-DE-zW9">
             <objects>
-                <viewController storyboardIdentifier="Login" id="EHt-wM-H7E" customClass="LoginViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Login" modalPresentationStyle="fullScreen" id="EHt-wM-H7E" customClass="LoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1gi-95-vtP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="メールアドレス" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nxv-fw-aOY">
+                                <rect key="frame" x="57" y="124" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="RWQ-9x-RhR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="パスワード" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZKT-uO-eB7">
+                                <rect key="frame" x="57" y="168" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="sdl-Ya-mua"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="アカウント作成時は表示名を入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cxi-05-Fm9">
+                                <rect key="frame" x="57" y="212" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="p1b-XI-6Tg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q1X-oY-dB8">
+                                <rect key="frame" x="57" y="256" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="rsE-M1-FbV"/>
+                                </constraints>
+                                <state key="normal" title="ログイン" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleLoginButton:" destination="EHt-wM-H7E" eventType="touchUpInside" id="IUZ-T3-YEI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HsG-m0-82I">
+                                <rect key="frame" x="57" y="306" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="8dZ-Gv-w7i"/>
+                                </constraints>
+                                <state key="normal" title="アカウント作成" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleCreateAccountButton:" destination="EHt-wM-H7E" eventType="touchUpInside" id="0fV-ZQ-hgu"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Nxv-fw-aOY" firstAttribute="centerX" secondItem="1gi-95-vtP" secondAttribute="centerX" id="2pT-jM-KNV"/>
+                            <constraint firstItem="HsG-m0-82I" firstAttribute="top" secondItem="Q1X-oY-dB8" secondAttribute="bottom" constant="10" id="PTS-OK-6Ne"/>
+                            <constraint firstItem="Cxi-05-Fm9" firstAttribute="top" secondItem="ZKT-uO-eB7" secondAttribute="bottom" constant="10" id="U5U-6g-Z4o"/>
+                            <constraint firstItem="ZKT-uO-eB7" firstAttribute="centerX" secondItem="1gi-95-vtP" secondAttribute="centerX" id="Wvi-4S-VGa"/>
+                            <constraint firstItem="HsG-m0-82I" firstAttribute="centerX" secondItem="1gi-95-vtP" secondAttribute="centerX" id="aY2-uY-zbp"/>
+                            <constraint firstItem="Q1X-oY-dB8" firstAttribute="top" secondItem="Cxi-05-Fm9" secondAttribute="bottom" constant="10" id="hJp-55-egg"/>
+                            <constraint firstItem="Nxv-fw-aOY" firstAttribute="top" secondItem="iG5-bN-1U7" secondAttribute="top" constant="80" id="kpN-Wd-Gpm"/>
+                            <constraint firstItem="Q1X-oY-dB8" firstAttribute="centerX" secondItem="1gi-95-vtP" secondAttribute="centerX" id="laQ-cj-QtN"/>
+                            <constraint firstItem="ZKT-uO-eB7" firstAttribute="top" secondItem="Nxv-fw-aOY" secondAttribute="bottom" constant="10" id="m3a-Ks-t8Z"/>
+                            <constraint firstItem="Cxi-05-Fm9" firstAttribute="centerX" secondItem="1gi-95-vtP" secondAttribute="centerX" id="xp7-hP-3q8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="iG5-bN-1U7"/>
                     </view>
+                    <connections>
+                        <outlet property="displayNameTextField" destination="Cxi-05-Fm9" id="hA5-tp-TsU"/>
+                        <outlet property="mailAddressTextField" destination="Nxv-fw-aOY" id="7p7-pP-Rwt"/>
+                        <outlet property="passwordTextField" destination="ZKT-uO-eB7" id="vJV-nJ-MNJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pyd-AR-Up3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -91,6 +154,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fof-iG-I1R" customClass="TabBarController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bVA-Bo-mUI">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -106,6 +170,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="btn" width="300" height="40"/>
         <image name="camera" width="25" height="25"/>
         <image name="home" width="25" height="25"/>
         <image name="setting" width="25" height="25"/>
